[package]
name = "bitcoin-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libp2p = { version = "0.50.0", features=["noise","mplex","tcp","tokio"] }	# features = ["tcp-tokio", "mdns-tokio"]
tokio = { version = "1.23.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] } # stream 
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"